@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.sf.ehcache</groupId>
         <artifactId>ehcache-parent</artifactId>
-        <version>1.4.0</version>
+        <version>1.4.0-beta</version>
     </parent>
     <name>Ehcache Core</name>
     <artifactId>ehcache</artifactId>
