@@ -3,7 +3,7 @@
     <parent>
         <groupId>net.sf.ehcache</groupId>
         <artifactId>ehcache-parent</artifactId>
-        <version>1.4.0</version>
+        <version>1.4.0-beta</version>
     </parent>
     <name>Ehcache Debugger</name>
     <artifactId>ehcache-debugger</artifactId>
