@@ -5,7 +5,7 @@
     <parent>
         <groupId>net.sf.ehcache</groupId>
         <artifactId>ehcache-parent</artifactId>
-        <version>1.3.0-beta3</version>
+        <version>1.4.0-beta</version>
     </parent>
     <artifactId>ehcache-site</artifactId>
     <name>Ehcache Site</name>
